[gd_scene load_steps=4 format=3 uid="uid://c8x8x8x8x8x8x8x8x8x8x8"]

[ext_resource type="Theme" uid="uid://b7w5k8j6x2q1a" path="res://resources/ui_theme.tres" id="1"]
[ext_resource type="Script" path="res://scripts/ui/ExplorationScene.gd" id="2"]
[ext_resource type="Shader" path="res://assets/main_menu_bg.gdshader" id="5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bg"]
shader = ExtResource("5")
shader_parameter/time_scale = 0.5
shader_parameter/wave_intensity = 0.3
shader_parameter/color_primary = Color(0.06, 0.05, 0.04, 1)
shader_parameter/color_accent = Color(0.15, 0.10, 0.06, 1)
shader_parameter/reduce_motion = false
shader_parameter/grain_intensity = 0.03
shader_parameter/ember_intensity = 0.06
shader_parameter/ember_color = Color(0.9, 0.4, 0.1, 1)

[node name="ExplorationScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
material = SubResource("ShaderMaterial_bg")

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="TopBar" type="HBoxContainer" parent="UI"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="AreaInfo" type="VBoxContainer" parent="UI/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(260, 0)
theme_override_constants/separation = 0

[node name="AreaName" type="Label" parent="UI/TopBar/AreaInfo"]
layout_mode = 2
text = "Town"

[node name="DangerLevel" type="Label" parent="UI/TopBar/AreaInfo"]
layout_mode = 2
text = "The air is calm and still."

[node name="PlayerStats" type="Label" parent="UI/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2
text = "Hero (Lv.1) - HP: 100/100 - Gold: 0"

[node name="MiddleSection" type="PanelContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 3

[node name="NarrativeLog" type="RichTextLabel" parent="UI/MiddleSection"]
layout_mode = 2
bbcode_enabled = true
scroll_active = true
scroll_following = true
text = ""

[node name="BottomBar" type="VBoxContainer" parent="UI"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)
theme_override_constants/separation = 4

[node name="ActionButtons" type="GridContainer" parent="UI/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 4

[node name="ExploreButton" type="Button" parent="UI/BottomBar/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Explore"

[node name="RestButton" type="Button" parent="UI/BottomBar/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rest"

[node name="TravelButton" type="Button" parent="UI/BottomBar/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Travel"

[node name="InventoryButton" type="Button" parent="UI/BottomBar/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory"

[node name="ShopButton" type="Button" parent="UI/BottomBar/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Shop"

[node name="QuestLogButton" type="Button" parent="UI/BottomBar/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Quests"

[node name="CodexButton" type="Button" parent="UI/BottomBar/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Codex"

[node name="MenuButton" type="Button" parent="UI/BottomBar/ActionButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Menu"

[connection signal="pressed" from="UI/BottomBar/ActionButtons/ExploreButton" to="." method="_on_explore_pressed"]
[connection signal="pressed" from="UI/BottomBar/ActionButtons/RestButton" to="." method="_on_rest_pressed"]
[connection signal="pressed" from="UI/BottomBar/ActionButtons/TravelButton" to="." method="_on_travel_pressed"]
[connection signal="pressed" from="UI/BottomBar/ActionButtons/InventoryButton" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="UI/BottomBar/ActionButtons/ShopButton" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="UI/BottomBar/ActionButtons/QuestLogButton" to="." method="_on_quest_log_pressed"]
[connection signal="pressed" from="UI/BottomBar/ActionButtons/CodexButton" to="." method="_on_codex_pressed"]
[connection signal="pressed" from="UI/BottomBar/ActionButtons/MenuButton" to="." method="_on_menu_pressed"]
